--- a/letovi/indexLETOVI.html
+++ b/letovi/indexLETOVI.html
@@ -468,6 +468,6 @@
     </footer>
 
     <script src="app.js"></script>
-    <script src="language.js"></script>
+    <script src="../language.js"></script>
   </body>
 </html>
