--- a/oNama/index.html
+++ b/oNama/index.html
@@ -194,6 +194,6 @@
         </span>
       </div>
     </footer>
-    <script src="language.js"></script>
+    <script src="../language.js"></script>
   </body>
 </html>
