--- a/parking/index.html
+++ b/parking/index.html
@@ -207,6 +207,6 @@
     </footer>
 
     <script src="app.js"></script>
-    <script src="language.js"></script>
+    <script src="../language.js"></script>
   </body>
 </html>
