--- a/pocetna/index.html
+++ b/pocetna/index.html
@@ -10,6 +10,7 @@
       Početna - Aerodrom Nikola Tesla
     </title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../global.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -283,6 +284,6 @@
     </footer>
 
     <script src="app.js"></script>
-    <script src="language.js"></script>
+    <script src="../language.js"></script>
   </body>
 </html>
