--- a/potvrda/index.html
+++ b/potvrda/index.html
@@ -151,6 +151,7 @@
       </div>
     </footer>
 
-    <script src="language.js"></script>
+    <script src="app.js"></script>
+    <script src="../language.js"></script>
   </body>
 </html>
