--- a/prijaviSe/index.html
+++ b/prijaviSe/index.html
@@ -185,6 +185,6 @@
     </footer>
 
     <script src="app.js"></script>
-    <script src="language.js"></script>
+    <script src="../language.js"></script>
   </body>
 </html>
