--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="logo1.png" alt="logo" />
+        <img src="../assets/logo1.png" alt="logo" />
       </div>
       <h1
         data-lang-sr="AERODROM NIKOLA TESLA"
@@ -41,13 +41,13 @@
 
         <div class="flags">
           <img
-            src="zastava1.png"
+            src="../assets/zastava1.png"
             alt="Srpska zastava"
             id="flag-sr"
             style="cursor: pointer"
           />
           <img
-            src="zastava2.png"
+            src="../assets/zastava2.png"
             alt="Engleska zastava"
             id="flag-en"
             style="cursor: pointer"
