--- a/pocetna/index.html
+++ b/pocetna/index.html
@@ -10,6 +10,7 @@
       Početna - Aerodrom Nikola Tesla
     </title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../global.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -55,7 +56,6 @@
         </div>
       </div>
     </header>
-
     <header1>
       <div class="linija">
         <h4>
@@ -146,6 +146,54 @@
                 Očekivan 12:00
               </td>
             </tr>
+            <tr>
+              <td>12:30</td>
+              <td>V7</td>
+              <td data-lang-sr="Sidnej" data-lang-en="Sydney">Sidnej</td>
+              <td data-lang-sr="Očekivan 12:30" data-lang-en="Expected 12:30">
+                Očekivan 12:30
+              </td>
+            </tr>
+            <tr>
+              <td>13:00</td>
+              <td>A9</td>
+              <td data-lang-sr="Singapur" data-lang-en="Singapore">Singapur</td>
+              <td data-lang-sr="Očekivan 13:10" data-lang-en="Expected 13:10">
+                Očekivan 13:10
+              </td>
+            </tr>
+            <tr>
+              <td>14:30</td>
+              <td>B0</td>
+              <td data-lang-sr="Pariz" data-lang-en="Paris">Pariz</td>
+              <td data-lang-sr="Očekivan 14:30" data-lang-en="Expected 14:30">
+                Očekivan 14:30
+              </td>
+            </tr>
+            <tr>
+              <td>15:00</td>
+              <td>V6</td>
+              <td data-lang-sr="Toronto" data-lang-en="Toronto">Toronto</td>
+              <td data-lang-sr="Očekivan 15:00" data-lang-en="Expected 15:00">
+                Očekivan 15:00
+              </td>
+            </tr>
+            <tr>
+              <td>15:50</td>
+              <td>C5</td>
+              <td data-lang-sr="Milano" data-lang-en="Milan">Milano</td>
+              <td data-lang-sr="Očekivan 16:00" data-lang-en="Expected 16:00">
+                Očekivan 16:00
+              </td>
+            </tr>
+            <tr>
+              <td>16:25</td>
+              <td>A1</td>
+              <td data-lang-sr="Rim" data-lang-en="Rome">Rim</td>
+              <td data-lang-sr="Očekivan 16:25" data-lang-en="Expected 16:25">
+                Očekivan 16:25
+              </td>
+            </tr>
           </tbody>
         </table>
         <div class="more">
@@ -158,7 +206,6 @@
           >
         </div>
       </div>
-
       <div class="card">
         <div class="tabs"></div>
         <h2 data-lang-sr="Avionske karte" data-lang-en="Flight Tickets">
